# crosplatform-cpp

./: readme.txt
libs/gles/: mytest02.sln
platform/android/: _build_b.cmd  _build_c.cmd  _build_d.cmd  _build_e.cmd  a.cmd  local.properties  my-release-key.keystore
platform/android/jni/: Android.mk  Application.mk  main.cpp
platform/android/libs/arm64-v8a/: gdb.setup
platform/android/libs/armeabi/: gdb.setup
platform/android/libs/armeabi-v7a/: gdb.setup
platform/android/libs/mips/: gdb.setup
platform/android/libs/mips64/: gdb.setup
platform/android/libs/x86/: gdb.setup
platform/android/libs/x86_64/: gdb.setup
platform/emscripten/: 1.txt  CMakeLists.txt  CMakeLists111.txt  hello.html  main.cpp
platform/windows/: images.cpp  images.h  main.cpp  opengl-test.sln  opengl-test.vcxproj  opengl-test.vcxproj.filters
platform/windows/Debug/: vc120.idb
platform/windows/Debug/opengl-test.tlog/: CL.read.1.tlog  CL.read.2.tlog  CL.read.6.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl-test.lastbuildstate
src/: app.cpp  app.h  images.cpp  images.h
